--- a/ThinkProcess_and_Code/231._Power_of_Two.md
+++ b/ThinkProcess_and_Code/231._Power_of_Two.md
@@ -1,3 +1,4 @@
+```python
 class Solution:
     def isPowerOfTwo(self, n: int) -> bool:
         
@@ -16,3 +17,4 @@ class Solution:
         # solution 3
         # count 1s
         return n > 0 and sum([int(i) for i in bin(n)[2:]]) == 1
+```
