--- a/ThinkProcess_and_Code/52._N-Queens_II.md
+++ b/ThinkProcess_and_Code/52._N-Queens_II.md
@@ -1,3 +1,5 @@
+```python
+
 class Solution:
     def totalNQueens(self, n: int) -> int:
         self.res = 0
@@ -19,9 +21,10 @@ class Solution:
                     col.remove(j)
                     diar.remove(i - j)
                     diac.remove(j + i)
-
+    
             return
-
+    
         dfs(set(), set(), set(), 0)
-
+    
         return self.res
+```
