--- a/ThinkProcess_and_Code/212. Word Search II.md
+++ b/ThinkProcess_and_Code/212. Word Search II.md
@@ -1,7 +1,7 @@
 ![avatar](../fig/212.jpg)
-就觉得是一道dfs， 简单的写自然过不了。
-#TLE
 
+就觉得是一道dfs， 简单的写自然过不了。
+TLE
 ```python
 class Solution:
     def findWords(self, board,words) :
